--- a/release/info.conf
+++ b/release/info.conf
@@ -1,7 +1,7 @@
 [gitStar]
-gs_name=gitStar用户名
-gs_pwd=gitStar密码
-git_name=github用户名
-git_pwd=github密码
+gs_name=cckuailong
+gs_pwd=masiyu19960417
+git_name=lovebear96
+git_pwd=masiyu19960417
 addr=218.241.135.34:88
-delay=6
+delay=10
