--- a/release/info.conf
+++ b/release/info.conf
@@ -2,6 +2,6 @@
 gs_name=gitStar用户名
 gs_pwd=gitStar密码
 git_name=gitHub用户名
-git_pwd=gitHub密码
+git_pwd=gitHub私人token (personal access token)
 addr=47.95.194.180
 delay=10
